# coding-exam_creditgenie

./: .gitignore  README.md  SPEC.md  pyproject.toml  sample_output.json
order_history/: __init__.py  access.py  api.py  database.py  exceptions.py  main.py  models.py  pagination.py  repository.py  seed_data.py  service.py
tests/: conftest.py
tests/integration/: test_order_history_integration.py
tests/unit/: test_order_history.py
