[project]
name = "order-history"
version = "0.1.0"
description = "Order history API with SQLite backend"
readme = "README.md"
requires-python = ">=3.14"
dependencies = ["fastapi>=0.115", "uvicorn>=0.34"]

[project.scripts]
order-history-api = "order_history.main:main"

[build-system]
requires = ["hatchling>=1"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["order_history"]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.9",
    "ty>=0.0",
    "pre-commit>=4",
    "httpx2>=2.5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: isolated unit tests",
    "integration: integration tests crossing I/O or component boundaries",
]

[tool.ruff]
target-version = "py314"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ty.environment]
python-version = "3.14"
